# shops_mediasoft

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/api/: filters.py  serializers.py  urls.py  views.py
backend/backend/: settings.py
backend/data/: cities.csv  streets.csv
backend/shop/: admin.py  models.py
backend/shop/management/commands/: add_cities_and_streets.py
backend/shop/migrations/: 0001_initial.py
infra/: .env.example  docker-compose.yml  nginx.conf
